Corrected the navigation spacings

--- a/src/components/Contact/ContactMiddle.css
+++ b/src/components/Contact/ContactMiddle.css
@@ -4,6 +4,11 @@
 .ContactBlock{
     display: flex;
 }
+
+.map iframe {
+    border-radius: 8px;
+}
+
 .ContactBlock-left{
     width: 40%;
     padding: 20px 20px 40px 0;
@@ -53,3 +58,4 @@
 .ContactBlock__card_text p{
     color: #fff;
 }
+
